--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,12 @@ readme = "README.md"
 python = "^3.10"
 torch = "^2.2.0"
 torch-geometric = "^2.4.0"
+kaggle = "^1.6.6"
+tensordict = "^0.3.1"
+torchrl = "^0.3.1"
+pandas = "^2.2.1"
+sympy = "^1.12"
+matplotlib = "^3.8.3"
 
 
 [tool.poetry.group.dev.dependencies]
